fin d'exo 5 , 6
